Updated to run on JDK 8 instead of requiring JDK 17.